--- a/newproject/src/app/app.component.html
+++ b/newproject/src/app/app.component.html
@@ -2,9 +2,6 @@
 <h1>
   hello {{title}}<br>{{2+2}}
 </h1>
-<!--templates-->
-<input type="text" #box name="user" placeholder="enter your name">
-<button onclick="getVal(box.value)">call function</button>
 
 <!--Routing-->
 <header>
@@ -13,7 +10,8 @@
       <li class="nav-item"><a class="nav-link active" routerLink="/">Home</a></li>
       <li  class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
       <li  class="nav-item"><a class="nav-link" routerLink="/product">Products</a></li>
-      <li  class="nav-item"><a class="nav-link" routerLink="/contact">Contact Us</a></li>
+      <li  class="nav-item"><a class="nav-link" routerLink="/contactus">Contact Us</a></li>
+      <li  class="nav-item"><a class="nav-link" routerLink="/conatact2">Contact2</a></li>
     </ul>
   </nav>
 </header>
