--- a/newproject/src/app/app.component.html
+++ b/newproject/src/app/app.component.html
@@ -7,11 +7,12 @@
 <header>
   <nav>
     <ul class="nav nav-tabs">
-      <li class="nav-item"><a class="nav-link active" routerLink="/">Home</a></li>
-      <li  class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
-      <li  class="nav-item"><a class="nav-link" routerLink="/product">Products</a></li>
-      <li  class="nav-item"><a class="nav-link" routerLink="/contactus">Contact Us</a></li>
-      <li  class="nav-item"><a class="nav-link" routerLink="/conatact2">Contact2</a></li>
+      <li class="nav-item"><a class="nav-link active" routerLink="/">Home</a></li>&nbsp;&nbsp;
+      <li  class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>&nbsp;&nbsp;
+      <li  class="nav-item"><a class="nav-link" routerLink="/product">Products</a></li>&nbsp;&nbsp;
+      <li  class="nav-item"><a class="nav-link" routerLink="/contactus">Contact Us</a></li>&nbsp;&nbsp;
+      <li  class="nav-item"><a class="nav-link" routerLink="/conatact2">Contact2</a></li>&nbsp;&nbsp;
+      <li  class="nav-item"><a class="nav-link" routerLink="/parent">Component Sharing Data</a></li>
     </ul>
   </nav>
 </header>
