--- a/newproject/src/app/app.component.html
+++ b/newproject/src/app/app.component.html
@@ -12,7 +12,8 @@
       <li  class="nav-item"><a class="nav-link" routerLink="/product">Products</a></li>&nbsp;&nbsp;
       <li  class="nav-item"><a class="nav-link" routerLink="/contactus">Contact Us</a></li>&nbsp;&nbsp;
       <li  class="nav-item"><a class="nav-link" routerLink="/conatact2">Contact2</a></li>&nbsp;&nbsp;
-      <li  class="nav-item"><a class="nav-link" routerLink="/parent">Component Sharing Data</a></li>
+      <li  class="nav-item"><a class="nav-link" routerLink="/parent">Input</a></li>&nbsp;&nbsp;
+      <li  class="nav-item"><a class="nav-link" routerLink="/parent2">Output</a></li>&nbsp;&nbsp;
     </ul>
   </nav>
 </header>
