--- a/newproject/src/app/app.component.html
+++ b/newproject/src/app/app.component.html
@@ -1,19 +1,22 @@
 <!--interpolation or data binding-->
-<h1>
+<!--<h1>
   hello {{title}}<br>{{2+2}}
-</h1>
+</h1>-->
 
 <!--Routing-->
 <header>
   <nav>
     <ul class="nav nav-tabs">
-      <li class="nav-item"><a class="nav-link active" routerLink="/">Home</a></li>&nbsp;&nbsp;
+      <li class="nav-item"><a class="nav-link active" routerLink="/home">Home</a></li>&nbsp;&nbsp;
       <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>&nbsp;&nbsp;
       <li class="nav-item"><a class="nav-link" routerLink="/product">Products</a></li>&nbsp;&nbsp;
       <li class="nav-item"><a class="nav-link" routerLink="/contactus">Contact Us</a></li>&nbsp;&nbsp;
       <li class="nav-item"><a class="nav-link" routerLink="/conatact2">Contact2</a></li>&nbsp;&nbsp;
       <li class="nav-item"><a class="nav-link" routerLink="/parent">Input</a></li>&nbsp;&nbsp;
       <li class="nav-item"><a class="nav-link" routerLink="/parent2">Output</a></li>&nbsp;&nbsp;
+      <li class="nav-item"><a class="nav-link" routerLink="/parent3">Subject Service</a></li>&nbsp;&nbsp;
+      <li class="nav-item"><a class="nav-link" routerLink="/task">Task</a></li>&nbsp;&nbsp;
+      <li class="nav-item"><a class="nav-link" routerLink="/post">Post API</a></li>&nbsp;&nbsp;
     </ul>
   </nav>
 </header>
