--- a/workspace/src/app/app.component.css
+++ b/workspace/src/app/app.component.css
@@ -40,7 +40,7 @@
     cursor: pointer;
 }
 .joiner{
-    width: 70%;
+    width: 80%;
     border-bottom: 4px dashed rgba(168,168,168,0.4);
     position: absolute;
     top: 30%;
@@ -55,11 +55,12 @@
 }
 .phonenumber input{
     width: 90%;
-    height: 40px;
+    height: 45px;
     background-color: rgba(255, 255, 255, 0.1);
     border: none;
     padding: 10px;
     color: white;
+    border-radius: 5px;
 }
 .login-btn{
     width: 150px;
@@ -73,4 +74,5 @@
     font-size: 18px;
     display: flex;
     word-spacing: 50px;
+    border-radius: 5px;
 }
