--- a/workspace/src/app/app.component.html
+++ b/workspace/src/app/app.component.html
@@ -3,10 +3,10 @@
     <div class="mainblock">
         <p class="mainheading">Just a few simple steps before we know it's you</p>
         <div class="mainblock-btn">
-            <button class="btn" type="button" (click)="set(constStep1)">1</button>&nbsp;
-            <button class="btn" type="button" (click)="set(constStep2)">2</button>&nbsp;
-            <button class="btn" type="button" (click)="set(constStep3)">3</button>&nbsp;
-            <button class="btn" type="button" (click)="set(constStep4)">4</button>&nbsp;
+            <button class="btn" type="button" (click)="set(constStep1)">1</button>
+            <button class="btn" type="button" (click)="set(constStep2)">2</button>
+            <button class="btn" type="button" (click)="set(constStep3)">3</button>
+            <button class="btn" type="button" (click)="set(constStep4)">4</button>
             <div class="joiner"></div>
         </div>
 
