--- a/workspace/src/app/app.component.html
+++ b/workspace/src/app/app.component.html
@@ -1,69 +1,1 @@
-<div class="body">
-
-    <div class="mainblock">
-        <p class="mainheading">Just a few simple steps before we know it's you</p>
-        <div class="mainblock-btn">
-            <button class="btn" type="button" (click)="set(constStep1)">1</button>
-            <button class="btn" type="button" (click)="set(constStep2)">2</button>
-            <button class="btn" type="button" (click)="set(constStep3)">3</button>
-            <button class="btn" type="button" (click)="set(constStep4)">4</button>
-            <div class="joiner"></div>
-        </div>
-
-        <div class="step" *ngIf="selectedBlock == constStep1">
-            <p class="step-subhead">Your registered mobile number</p>
-            <form>
-                <div class="phonenumber"><input type="text" placeholder="9876543210"></div>
-                <button class="login-btn">Login &#10132;</button>
-            </form>
-        </div>
-        <div class="step" *ngIf="selectedBlock == constStep2">
-            <p >Kindly verify the pin code of your residential address</p>
-            <form class="pincode">
-                <div> <input type="radio" id="Pin1" name="pin" value="601302">
-                    <label for="Pin1">601302</label>
-                </div>
-                <div> <input type="radio" id="Pin2" name="pin" value="208916">
-                    <label for="Pin2">208916</label>
-                </div>
-                <div> <input type="radio" id="Pin3" name="pin" value="112345">
-                    <label for="Pin3">112345</label>
-                </div>
-                <div> <input type="radio" id="Pin4" name="pin" value="602716">
-                    <label for="Pin4">602716</label>
-                </div>
-
-            </form>
-        </div>
-        <div class="step" *ngIf="selectedBlock == constStep3">
-            <p>Kindly verify your year of birth</p>
-            <form>
-                <div><input type="radio" id="year1" name="year" value="1986">
-                    <label for="year1">1986</label>
-                </div>
-                <div><input type="radio" id="year2" name="year" value="1987">
-                    <label for="year2">1987</label>
-                </div>
-                <div><input type="radio" id="year3" name="year" value="1985">
-                    <label for="year3">1985</label>
-                </div>
-                <div><input type="radio" id="year4" name="year" value="1992">
-                    <label for="year4">1992</label>
-                </div>
-
-            </form>
-        </div>
-        <div class="step" *ngIf="selectedBlock == constStep4">
-            <form>
-                <p>Enter the OTP</p>
-                <div class="otp"><input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                </div>
-                <button class="login-btn">Login &#10132;</button>
-            </form>
-        </div>
-    </div>
-
-</div>
+<app-task></app-task>
