--- a/workspace/src/app/task/task.component.html
+++ b/workspace/src/app/task/task.component.html
@@ -4,10 +4,14 @@
     <div class="mainblock">
         <p class="mainheading">Just a few simple steps before we know it's you</p>
         <div class="mainblock-btn">
-            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '1' }" (click)="set(Step1)">1</button>
-            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '2' }" (click)="set(Step2)">2</button>
-            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '3' }" (click)="set(Step3)">3</button>
-            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '4' }" (click)="set(Step4)">4</button>
+            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '1' }"
+                (click)="set(Step1)">1</button>
+            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '2' }"
+                (click)="set(Step2)">2</button>
+            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '3' }"
+                (click)="set(Step3)">3</button>
+            <button class="btn" type="button" [ngClass]="{ color: selectedBlock >= '4' }"
+                (click)="set(Step4)">4</button>
             <div class="joiner"></div>
         </div>
         <div class="step">
@@ -25,16 +29,16 @@
             <p>Kindly verify the pin code of your residential address</p>
             <form class="pincode">
                 <div>
-                    <input type="button" id="Pin1" name="pin" value="601302" (click)="set(Step3)">
+                    <input type="button" value="601302" (click)="set(Step3)">
                 </div>
                 <div>
-                    <input type="button" id="Pin2" name="pin" value="208916" (click)="set(Step3)">
+                    <input type="button" value="208916" (click)="set(Step3)">
                 </div>
                 <div>
-                    <input type="button" id="Pin3" name="pin" value="112345" (click)="set(Step3)">
+                    <input type="button" value="112345" (click)="set(Step3)">
                 </div>
                 <div>
-                    <input type="button" id="Pin4" name="pin" value="602716" (click)="set(Step3)">
+                    <input type="button" value="602716" (click)="set(Step3)">
                 </div>
             </form>
         </div>
@@ -42,16 +46,16 @@
             <p>Kindly verify your year of birth</p>
             <form class="dob">
                 <div>
-                    <input type="button" id="year1" name="year" value="1986" (click)="set(Step4)">
+                    <input type="button" value="1986" (click)="set(Step4)">
                 </div>
                 <div>
-                    <input type="button" id="year2" name="year" value="1987" (click)="set(Step4)">
+                    <input type="button" value="1987" (click)="set(Step4)">
                 </div>
                 <div>
-                    <input type="button" id="year3" name="year" value="1985" (click)="set(Step4)">
+                    <input type="button" value="1985" (click)="set(Step4)">
                 </div>
                 <div>
-                    <input type="button" id="year4" name="year" value="1992" (click)="set(Step4)">
+                    <input type="button" value="1992" (click)="set(Step4)">
                 </div>
             </form>
         </div>
@@ -64,7 +68,7 @@
                         <input type="text">
                         <input type="text">
                     </div>
-                    <button class="login-btn"  (click)="set(Step1)">Login &#10132;</button>
+                    <button class="login-btn" (click)="set(Step1)">Login &#10132;</button>
                 </form>
             </div>
         </div>
