--- a/workspace/src/app/task/task.component.html
+++ b/workspace/src/app/task/task.component.html
@@ -1,4 +1,3 @@
-<script src="https://kit.fontawesome.com/0e052eb6e4.js" crossorigin="anonymous"></script>
 <div class="body">
 
     <div class="mainblock">
@@ -63,12 +62,13 @@
             <div>
                 <p>Enter the OTP</p>
                 <form>
-                    <div class="otp"><input type="text">
-                        <input type="text">
-                        <input type="text">
-                        <input type="text">
+                    <div class="otp">
+                        <input type="text" autofocus="">&nbsp;
+                        <input type="text">&nbsp;
+                        <input type="text">&nbsp;
+                        <input type="text">&nbsp;
                     </div>
-                    <button class="login-btn" (click)="set(Step1)">Login &#10132;</button>
+                    <button class="login-btn">Login &#10132;</button>
                 </form>
             </div>
         </div>
