--- a/workspace/src/app/task/task.component.html
+++ b/workspace/src/app/task/task.component.html
@@ -63,7 +63,7 @@
                 <p>Enter the OTP</p>
                 <form>
                     <div class="otp">
-                        <input type="text" autofocus="">&nbsp;
+                        <input type="text">&nbsp;
                         <input type="text">&nbsp;
                         <input type="text">&nbsp;
                         <input type="text">&nbsp;
