--- a/workspace/src/app/task/task.component.css
+++ b/workspace/src/app/task/task.component.css
@@ -55,13 +55,16 @@
 }
 .phonenumber input{
     width: 90%;
-    height: 45px;
+    height: 50px;
     background-color: rgba(255, 255, 255, 0.1);
     border: none;
     padding: 10px;
     color: white;
     border-radius: 5px;
     outline: none;
+}
+.phonenumber input::placeholder{
+    color: white;
 }
 .login-btn{
     width: 150px;
@@ -106,7 +109,8 @@
     height: 40px;
     border: none;
     border-bottom: 2px solid rgb(1, 231, 231);
-    background-color: transparent;   
+    background-color: transparent;
+    padding: 10px;   
 }
 .color{
     background-color: rgb(1, 231, 231);
