--- a/workspace/src/app/task/task.component.css
+++ b/workspace/src/app/task/task.component.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
 }
-.body{
+.outerblock{
     background-image: url(	https://clearmydues.com/autoCollectionUAT/Group_1x.jpg);
     background-size: cover;
     min-height: 100vh;
@@ -119,5 +119,5 @@
     text-align: center;
 }
 .color{
-    background-color: rgb(1, 231, 231);
+    background-color: rgb(1, 231, 231) !important;
 }
