--- a/file/src/app/app.component.html
+++ b/file/src/app/app.component.html
@@ -2,8 +2,6 @@
 <p appHighlight>Hightlight me!</p>
 <p [appHighlight] = 'color'>Hightlight me!</p>
 
-<hr>
-
 
 <h2>Pick a highlight color</h2>
 <div>
@@ -12,10 +10,12 @@
   <input type="radio" name="colors" (click)="color='cyan'">Cyan
 </div>
 <p [appHighlight]="color">Highlight me!</p>
-<hr>
+<p>--------------------------------------------------------------</p>
 <p [appHighlight]="color" defaultColor="violet">
   Highlight me too!
 </p>
+
+<hr>
 
 <h1>Search filter</h1>
 <div class="content" role="main">
@@ -36,3 +36,10 @@
 </div>
 
 <app-animationdemo></app-animationdemo>
+
+<hr>
+
+<h1>Lazy loading</h1>
+<button style="padding: 20px; color: white; background-color: green;" routerLink="a">Load Module A</button>
+<button style="padding: 20px; color: white; background-color: blue;" routerLink="b">Load Module B</button>
+<router-outlet></router-outlet>
