--- a/ethera/src/app/collection/collection.component.html
+++ b/ethera/src/app/collection/collection.component.html
@@ -1,13 +1,13 @@
 <div class="page-wrapper">
     <div class="upperpart"></div>
     <div class="lowerpart">
-        <div class="container">
+        <div class="container" >
             <p>Portfolio Overview</p>
             <div class="parentportfoliooption">
                 <div class="child-first">
                     <div class="profile-rupee">
                         <div class="user">
-                            <button (click)="changeState()"><img [@changeDivSize]=currentState1
+                            <button (click)="changeState()" [@changeDivSize]=currentState1><img
                                     src="../assets/imageOfPerson.png"></button>
                         </div>
                         <div class="separator"></div>
@@ -15,7 +15,7 @@
                             <button (click)="changeState()" [@changeDivSize]=currentState2>&#8377;</button>
                         </div>
                     </div>
-                    <div class="amount-account">hghgh</div>
+                    <div class="amount-account">{{accountOrAmount}}</div>
                 </div>
                 <div class="child-second">
                     <div class="option-one">
@@ -38,8 +38,18 @@
                             <option value="2">Loan</option>
                         </select>
                     </div>
-                    <div class="option-four"><button><img src="https://clearmydues.com/ethera/assets/images/icons/export.svg"> Export Master Report</button></div>
+                    <div class="option-four">
+                        <button (click)="toogleTag"><img src="https://clearmydues.com/ethera/assets/images/icons/export.svg"> Export Master
+                            Report</button>
+                    </div>
                 </div>
+            </div>
+            <div *ngIf="showMe" class="dailoguebox">
+                <div><img src="	https://clearmydues.com/ethera/assets/images/icons/timer.svg"></div>
+                <div>Your report is being processed</div>
+                <div>Download link for the report will be mailed to you on your</div>
+                <div>registered email id within 24 hours.</div>
+                <button>OK</button>
             </div>
         </div>
     </div>
